# thicker-stl

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  definition-of-done.md  noxfile.py  pyproject.toml  renovate.json5  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: coverage.yaml  dependency-security-scan.yaml
docs/: developer-guide.md
docs/adrs/: 001-use-stl-files.md  002-use-nox-for-dev-automation  002-use-nox-for-dev-automation.md  003-use-ruff-linter  003-use-ruff-linter.md  004-use-pre-commit  004-use-pre-commit.md  005-mesh-format.md  006-screaming-architecture.md  007-protocol-based-interfaces.md  008-thicker-testing-strategy.md  009-pytest-random-order.md  010-hemispherical-cylindrical-transformation.md  011-base-height-heuristic.md  012-replace-pip-with-uv.md  013-cross-section-analysis-for-targeted-thickening.md  014-cross-section-centroid-thickening.md  use_nox_for_generating_requirements.md
tests/adapters/: test_file_processor.py  test_stl_mesh_reader.py  test_stl_mesh_writer.py
tests/cli/: test_cli.py  test_cli_call_process_thickening.py
tests/connectors/: test_file_processor.py
tests/data/: test_cylinder.stl
tests/domain/: test_cross_section_analysis.py  test_cross_section_thickening.py  test_cylindrical_thickening.py  test_dome_cylinder_transformation.py  test_mesh.py  test_simple_thickening_transformation.py  test_slice.py  test_spherical_thickening.py  test_unity_transformation.py  test_vertex_calculations.py
tests/fixtures/: test_cube.stl  test_cylinder.stl  test_cylinder_2.stl
tests/integration/: test_cli_integration_subprocess.py  test_hemispherical_cyclindrical_transformation.py  test_stl_write_dome_read.py  test_stl_write_thicken_read.py
tests/use_cases/: test_mesh_dimensions.py  test_process_thickening.py  test_thicken_use_case.py
tests/utils/: generate_test_cube.py  generate_test_cylinder.py  generate_test_cylinder_2.py  test_generate_test_cylinder.py
thicker/adapters/: file_processor.py  stl_mesh_reader.py  stl_mesh_writer.py
thicker/cli/: cli.py
thicker/connectors/: file_processor.py
thicker/domain/: cross_section_analysis.py  cross_section_thickening.py  mesh.py  slice.py  transformations.py
thicker/interfaces/: mesh_reader.py  mesh_writer.py
thicker/use_cases/: constants.py  (+1 more)
utils/: figurine_profile.py
(+11 files in other folders)
