[project]
name = "thicker-stl"
version = "0.1.1"
description = "A CLI tool for STL thickening."
authors = [{ name = "Tom Willis", email = "your.email@example.com" }]
license = { file = "MIT" }
dependencies = [
    "numpy>=2.2.1",
    "numpy-stl",
]
requires-python = ">= 3.11"

[tool.uv]
package = true

[project.scripts]
thicker-stl = "thicker.cli.cli:main"

[tool.ruff]
# Specify target Python version
target-version = "py311"

# Enable autofix
fix = true

# Exclude generated code or files to ignore
exclude = [
    ".nox/",
    ".git/",
    "__pycache__/",
    "docs/",
    "venv/",
    "tests/utils/generate_test_cylinder.py",
    "*/__init__.py",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), pycodestyle warnings (`W`)
# McCabe complexity (`C901`)
select = ["E", "F", "I", "W","C901"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 15

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "numpy>=2.2.1",
    "numpy-stl>=3.2.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.16.0",
    "ruff>=0.8.5",
]
